--- a/src/components/styles/Work.css
+++ b/src/components/styles/Work.css
@@ -327,6 +327,7 @@
     font-size: 36px;
     margin-top: 50px;
     margin-bottom: 20px;
+    text-align: center;
   }
 
   .work-title {
